# python-gazelle

./: .copier-answers.yml  .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml  docs.yml  publish.yml
devtools/: capture_fixtures.py  lint.py
docs/: development.md  index.md  installation.md  publishing.md
docs/guide/: authentication.md  error-handling.md  installation.md  quickstart.md  rate-limiting.md
docs/reference/: automation.md  clients.md  errors.md  models.md  resources.md  transport.md
docs/superpowers/: 2026-05-30_python-gazelle.md  2026-05-30_python-gazelle_feature_map.md
docs/superpowers/plans/: 2026-05-30-core-api-client.md  2026-06-04-cross-seed.md  2026-06-04-cross-upload.md  2026-06-04-upload-snatch-monitoring.md
docs/superpowers/specs/: 2026-05-30-core-api-client-design.md  2026-05-30-qbit-tracker-companion-vision.md  2026-05-30-upload-snatch-monitoring-design.md  2026-06-04-cross-seed-design.md  2026-06-04-cross-upload-design.md
openspec/changes/archive/2026-05-30-core-api-client/: design.md  tasks.md
openspec/changes/archive/2026-05-30-core-api-client/specs/gazelle-client/: spec.md
openspec/changes/archive/2026-05-30-core-api-client/specs/gazelle-transport/: spec.md
openspec/changes/archive/2026-05-30-core-api-client/specs/response-models/: spec.md
openspec/changes/archive/2026-05-30-core-api-client/specs/sync-client/: spec.md
openspec/changes/archive/2026-06-03-api-surface-expansion/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-api-surface-expansion/specs/gazelle-client/: spec.md
openspec/changes/archive/2026-06-03-api-surface-expansion/specs/gazelle-transport/: spec.md
openspec/changes/archive/2026-06-03-api-surface-expansion/specs/response-models/: spec.md
openspec/changes/archive/2026-06-04-cross-seed/: design.md  tasks.md
openspec/changes/archive/2026-06-04-cross-seed/specs/cross-seed/: spec.md
openspec/changes/archive/2026-06-04-cross-upload/: design.md  proposal.md
openspec/changes/archive/2026-06-04-upload-snatch-monitoring/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-04-upload-snatch-monitoring/specs/gazelle-client/: spec.md
openspec/changes/core-api-client/: proposal.md  tasks.md
openspec/changes/cross-seed/: proposal.md  tasks.md
openspec/changes/cross-upload/: tasks.md
openspec/changes/cross-upload/specs/cross-upload/: spec.md
openspec/changes/upload-snatch-monitoring/: design.md  proposal.md  tasks.md
openspec/changes/upload-snatch-monitoring/specs/gazelle-client/: spec.md
openspec/changes/upload-snatch-monitoring/specs/torrent-monitoring/: spec.md
openspec/specs/cross-seed/: spec.md
openspec/specs/cross-upload/: spec.md
openspec/specs/gazelle-client/: spec.md
openspec/specs/gazelle-transport/: spec.md
openspec/specs/response-models/: spec.md
openspec/specs/sync-client/: spec.md
openspec/specs/torrent-monitoring/: spec.md
src/pygazelle/: __init__.py  client.py  crossseed.py  crossupload.py  errors.py  monitoring.py  sync.py  transport.py
src/pygazelle/models/: __init__.py  artists.py  base.py  bookmarks.py  collages.py  inbox.py  monitoring.py  notifications.py  requests.py  site.py  subscriptions.py  torrents.py  user.py  writes.py
src/pygazelle/resources/: __init__.py  artists.py  base.py  bookmarks.py  collages.py  inbox.py  notifications.py  requests.py  site.py  subscriptions.py  torrents.py  user.py
tests/: support.py  test_client.py  test_crossseed.py  test_crossseed_sync.py  test_crossupload.py  test_crossupload_sync.py  test_errors.py  test_monitoring.py  test_monitoring_sync.py  test_sync.py  test_transport.py
tests/integration/: conftest.py  test_crossseed_live.py  test_orpheus.py  test_redacted.py  test_user_torrents_live.py
tests/models/: conftest.py  test_artists.py  test_bookmarks.py  test_collages.py  test_monitoring.py  test_notifications.py  test_site.py  test_subscriptions.py  test_torrents.py  test_user.py
