# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/technophile-musicfan/python-gazelle"
Documentation = "https://technophile-musicfan.github.io/python-gazelle/"
# Homepage = "https://..."

[project]
name = "python-gazelle"
description = "Client library to interact with gazelle based trackers"
authors = [
    { name="HOZHENWAI", email="hozhenwai@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]

# https://pypi.org/classifiers/
# Adjust as needed:
classifiers = [
    # Adjust as needed:
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    # Include this to avoid accidentally publishing to PyPI:
    # "Private :: Do Not Upload",
]


# ---- Main dependencies ----

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
]


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-sugar>=1.1.1",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.12",
    "codespell>=2.4.2",
    "rich>=15.0.0",
    "basedpyright>=1.39.3",
    "funlog>=0.2.1",
    "python-dotenv>=1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[project.scripts]
# Add script entry points here:
python-gazelle = "pygazelle:main"


# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["src/pygazelle"]

[tool.hatch.build.targets.sdist]
# Restrict the source distribution to what a consumer needs. Without this,
# hatchling's default sdist ships every non-gitignored file — including
# project-internal tooling (.beads/, .idea/, openspec/, CLAUDE.md, AGENTS.md)
# that should never reach PyPI. `only-include` is strict (unlike `include`,
# which is additive to hatchling's defaults).
only-include = [
    "src/pygazelle",
    "README.md",
    "LICENSE",
]


# ---- Settings ----

[tool.ruff]
# Set as desired, typically 88 (black standard) or 100 (wide).
line-length = 100

[tool.ruff.lint]
select = [
    # See: https://docs.astral.sh/ruff/rules/
    # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
    "E", # https://docs.astral.sh/ruff/rules/#error-e
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    # Other possibilities:
    # "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "Q", # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    # "COM", # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    # "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim

]
ignore = [
    # Disable some rules that are overly pedantic. Add/remove as desired:
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117", # https://docs.astral.sh/ruff/rules/over-indented/
    "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.basedpyright]
# BasedPyright currently seems like the best type checker option, much faster
# than mypy and with a good extension for VSCode/Cursor.
# https://marketplace.visualstudio.com/items?itemName=detachhead.basedpyright
# https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
include = ["src", "tests", "devtools"]
# Resolve repo-root-relative test imports (e.g. `from tests.support import ...`),
# mirroring pytest's `pythonpath = ["."]`.
extraPaths = ["."]
# By default BasedPyright is very strict, so you almost certainly want to disable
# some of the rules.
# First, these turn off warnings about (yes) how you ignore warnings:
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
# A few typically noisy warnings are next.
# How many you enable is up to you. The first few are off by default, but you can
# comment/uncomment these as desired:
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false
# A Client.monitor() factory returns a TorrentMonitor that holds a typed
# GazelleClient back-reference — an inherent (TYPE_CHECKING-only, runtime-safe)
# import cycle that basedpyright flags wherever the import is placed. Disabled
# rather than papering it with a Protocol indirection alien to this codebase.
reportImportCycles = false
# reportPrivateImportUsage = false
# reportPrivateLocalImportUsage = false
# reportMissingImports = false
# reportUnnecessaryIsInstance = false
# reportUnknownVariableType = false
# reportUnknownArgumentType = false

# Test and devtools code is held to a looser bar than the library itself: pytest
# fixtures and mock transports are intentionally loosely typed, and tests
# legitimately introspect private attributes. We keep the semantically valuable
# checks on (reportArgumentType, reportCallIssue, reportOptionalMemberAccess,
# etc.) and only relax the "annotate everything / don't touch privates" noise.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeArgument = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportPrivateUsage = false
reportUnusedParameter = false
reportUnusedVariable = false

[[tool.basedpyright.executionEnvironments]]
root = "devtools"
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeArgument = false

[tool.codespell]
# tests/fixtures holds real captured API responses (gitignored, regenerated per
# dev); real metadata trips codespell, so skip it. Absent in CI anyway.
skip = "*/fixtures/*"
# Add here as needed:
# ignore-words-list = "foo,bar"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "src",
    "tests",
]
pythonpath = ["."]
norecursedirs = []
filterwarnings = []
asyncio_mode = "auto"
